// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselList - General should render just a line break if the carousel isn't shown 1`] = `
<CarouselList
  carouselShow={false}
  containedViewSelected="cv-42"
  containedViews={
    Object {
      "cv-42": Object {
        "name": "CV_MOCK",
      },
    }
  }
  id={0}
  indexSelected="42"
  navItemSelected="42"
  navItems={Object {}}
  navItemsIds={Array []}
  onBoxAdded={[MockFunction onBoxAdded]}
  onContainedViewNameChanged={[MockFunction onContainedViewNameChanged]}
  onContainedViewSelected={[MockFunction onContainedViewSelected]}
  onIndexSelected={[MockFunction onIndexSelected]}
  onNavItemAdded={[MockFunction onNavItemAdded]}
  onNavItemExpanded={[MockFunction onNavItemExpanded]}
  onNavItemNameChanged={[MockFunction onNavItemNameChanged]}
  onNavItemReordered={[MockFunction onNavItemReordered]}
  onNavItemSelected={[MockFunction onNavItemReordered]}
  viewToolbars={
    Object {
      "cv-42": Object {
        "viewName": "VN_CV_MOCK",
      },
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <br />
  </div>
</CarouselList>
`;

exports[`CarouselList - General should render with required props 1`] = `
<CarouselList
  carouselShow={true}
  containedViewSelected="cv-42"
  containedViews={
    Object {
      "cv-42": Object {
        "name": "CV_MOCK",
      },
    }
  }
  id={0}
  indexSelected="42"
  navItemSelected="42"
  navItems={Object {}}
  navItemsIds={Array []}
  onBoxAdded={[MockFunction onBoxAdded]}
  onContainedViewNameChanged={[MockFunction onContainedViewNameChanged]}
  onContainedViewSelected={[MockFunction onContainedViewSelected]}
  onIndexSelected={[MockFunction onIndexSelected]}
  onNavItemAdded={[MockFunction onNavItemAdded]}
  onNavItemExpanded={[MockFunction onNavItemExpanded]}
  onNavItemNameChanged={[MockFunction onNavItemNameChanged]}
  onNavItemReordered={[MockFunction onNavItemReordered]}
  onNavItemSelected={[MockFunction onNavItemReordered]}
  viewToolbars={
    Object {
      "cv-42": Object {
        "viewName": "VN_CV_MOCK",
      },
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      id="sortablesCollapse"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "cursor": "pointer",
          "height": "20px",
          "marginBottom": "2px",
          "paddingLeft": "10px",
        }
      }
    >
      <i
        className="material-icons"
        style={
          Object {
            "color": "gray",
            "fontSize": "22px",
          }
        }
      >
        arrow_drop_down
      </i>
      <span
        style={
          Object {
            "color": "white",
            "fontSize": "11px",
          }
        }
      >
        i18n string
      </span>
    </div>
    <div
      className="carList connectedSortables"
      onClick={[Function]}
      style={
        Object {
          "display": "inherit",
          "height": "calc(50%)",
        }
      }
    />
    <div
      id="scontainedViewsCollapse"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "cursor": "pointer",
          "height": "20px",
          "marginBottom": "2px",
          "paddingLeft": "10px",
        }
      }
    >
      <i
        className="material-icons"
        style={
          Object {
            "color": "gray",
            "fontSize": "22px",
          }
        }
      >
        arrow_drop_down
      </i>
      <span
        style={
          Object {
            "color": "white",
            "fontSize": "11px",
          }
        }
      >
        i18n string
      </span>
    </div>
    <div
      className="containedViewsList"
      style={
        Object {
          "display": "block",
          "height": "calc(50% - 126px)",
          "overflowX": "hidden",
          "overflowY": "auto",
        }
      }
    >
      <div
        className="empty-info"
        style={
          Object {
            "display": "none",
          }
        }
      >
        i18n string
      </div>
      <div
        className="navItemBlock"
        key="cv-42"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "backgroundColor": "#222",
            "color": "white",
            "height": "20px",
            "paddingBottom": "25px",
            "paddingLeft": "10px",
            "paddingTop": "10px",
            "width": "100%",
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "marginLeft": "10px",
            }
          }
        >
          <i
            className="material-icons"
            style={
              Object {
                "marginRight": "10px",
              }
            }
          >
            insert_drive_file
          </i>
          <EditorIndexTitle
            hidden={false}
            id="cv-42"
            index={1}
            onNameChanged={[MockFunction onContainedViewNameChanged]}
            title="VN_CV_MOCK"
          >
            <span>
              <div
                className="actualSectionTitle"
                onDoubleClick={[Function]}
                style={
                  Object {
                    "textDecoration": "initial",
                  }
                }
              >
                 
                VN_CV_MOCK
              </div>
              <i
                className="material-icons"
                style={
                  Object {
                    "color": "white",
                    "position": "absolute",
                    "right": "0",
                  }
                }
              />
            </span>
          </EditorIndexTitle>
        </span>
      </div>
    </div>
  </div>
</CarouselList>
`;
